[gd_scene load_steps=12 format=2]

[ext_resource path="res://Internal/Default/Fonts/RobotoMono/static/RobotoMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Internal/Default/Graphics/d5c9844d-6d77-44b6-9833-d95ced4e5e9b.jpg" type="Texture" id=2]
[ext_resource path="res://Internal/Default/Fonts/RobotoMono/static/RobotoMono-SemiBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Internal/Scripts/Managers/ConsoleManager.gd" type="Script" id=4]
[ext_resource path="res://Internal/Scripts/Managers/SearchManager.gd" type="Script" id=5]
[ext_resource path="res://Internal/Scripts/Managers/OverallManager.gd" type="Script" id=6]
[ext_resource path="res://Internal/Scripts/Managers/RawManager.gd" type="Script" id=7]
[ext_resource path="res://Internal/Scripts/Managers/EditorManager.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=3]
size = 13
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="AppInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Managers" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="OverallManager" type="Control" parent="Managers"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="SearchManager" type="Control" parent="Managers"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="WindowManager" type="Control" parent="Managers"]
margin_right = 40.0
margin_bottom = 40.0

[node name="RawManager" type="Control" parent="Managers"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )

[node name="EditorManager" type="Control" parent="Managers"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 8 )

[node name="ColorManager" type="Control" parent="Managers"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ConsoleManager" type="Control" parent="Managers"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="Interface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Interface"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="TopBar" type="HBoxContainer" parent="Interface/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FileMenu" type="MenuButton" parent="Interface/VBoxContainer/TopBar"]
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )
text = "File"

[node name="EditMenu" type="MenuButton" parent="Interface/VBoxContainer/TopBar"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )
focus_mode = 2
text = "Edit"

[node name="ViewMenu" type="MenuButton" parent="Interface/VBoxContainer/TopBar"]
margin_left = 108.0
margin_right = 158.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )
focus_mode = 2
text = "View"

[node name="Spacer" type="Control" parent="Interface/VBoxContainer/TopBar"]
margin_left = 162.0
margin_right = 915.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="RawToggle" type="CheckButton" parent="Interface/VBoxContainer/TopBar"]
margin_left = 919.0
margin_right = 1024.0
margin_bottom = 40.0
pressed = true
text = "Raw"

[node name="MainDisplay" type="VSplitContainer" parent="Interface/VBoxContainer"]
margin_top = 44.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 100

[node name="EditRawWindow" type="HSplitContainer" parent="Interface/VBoxContainer/MainDisplay"]
margin_right = 1024.0
margin_bottom = 372.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 125

[node name="EditorWindow" type="VBoxContainer" parent="Interface/VBoxContainer/MainDisplay/EditRawWindow"]
margin_right = 631.0
margin_bottom = 372.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="HeaderColor" type="ColorRect" parent="Interface/VBoxContainer/MainDisplay/EditRawWindow/EditorWindow"]
margin_right = 631.0
margin_bottom = 18.0
rect_min_size = Vector2( 0, 18 )
color = Color( 0.196078, 0.207843, 0.235294, 1 )

[node name="HeaderLabel" type="Label" parent="Interface/VBoxContainer/MainDisplay/EditRawWindow/EditorWindow/HeaderColor"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Editor Window"
align = 1
valign = 1

[node name="SelectorEditorWindow" type="HSplitContainer" parent="Interface/VBoxContainer/MainDisplay/EditRawWindow/EditorWindow"]
margin_top = 18.0
margin_right = 631.0
margin_bottom = 372.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = -100

[node name="SelectorContainer" type="ScrollContainer" parent="Interface/VBoxContainer/MainDisplay/EditRawWindow/EditorWindow/SelectorEditorWindow"]
margin_right = 209.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VerticalColor" type="ColorRect" parent="Interface/VBoxContainer/MainDisplay/EditRawWindow/EditorWindow/SelectorEditorWindow/SelectorContainer"]
margin_right = 209.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.172549, 0.164706, 0.196078, 1 )

[node name="VerticalLayout" type="VBoxContainer" parent="Interface/VBoxContainer/MainDisplay/EditRawWindow/EditorWindow/SelectorEditorWindow/SelectorContainer/VerticalColor"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EditorContainer" type="ScrollContainer" parent="Interface/VBoxContainer/MainDisplay/EditRawWindow/EditorWindow/SelectorEditorWindow"]
margin_left = 221.0
margin_right = 631.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VerticalColor" type="ColorRect" parent="Interface/VBoxContainer/MainDisplay/EditRawWindow/EditorWindow/SelectorEditorWindow/EditorContainer"]
margin_right = 410.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.14902, 0.137255, 0.172549, 1 )

[node name="VerticalLayout" type="VBoxContainer" parent="Interface/VBoxContainer/MainDisplay/EditRawWindow/EditorWindow/SelectorEditorWindow/EditorContainer/VerticalColor"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RawWindow" type="VBoxContainer" parent="Interface/VBoxContainer/MainDisplay/EditRawWindow"]
margin_left = 643.0
margin_right = 1024.0
margin_bottom = 372.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="HeaderColor" type="ColorRect" parent="Interface/VBoxContainer/MainDisplay/EditRawWindow/RawWindow"]
margin_right = 381.0
margin_bottom = 18.0
rect_min_size = Vector2( 0, 18 )
color = Color( 0.196078, 0.207843, 0.235294, 1 )

[node name="HeaderLabel" type="Label" parent="Interface/VBoxContainer/MainDisplay/EditRawWindow/RawWindow/HeaderColor"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Raw Window"
align = 1
valign = 1

[node name="TextEdit" type="TextEdit" parent="Interface/VBoxContainer/MainDisplay/EditRawWindow/RawWindow"]
margin_top = 18.0
margin_right = 381.0
margin_bottom = 372.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
bookmark_gutter = true
highlight_all_occurrences = true
smooth_scrolling = true

[node name="ConsoleColor" type="ColorRect" parent="Interface/VBoxContainer/MainDisplay"]
margin_top = 384.0
margin_right = 1024.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.14902, 0.145098, 0.160784, 1 )

[node name="Console" type="VBoxContainer" parent="Interface/VBoxContainer/MainDisplay/ConsoleColor"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeaderColor" type="ColorRect" parent="Interface/VBoxContainer/MainDisplay/ConsoleColor/Console"]
margin_right = 1024.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
color = Color( 0.196078, 0.207843, 0.235294, 1 )

[node name="ConsoleBar" type="HBoxContainer" parent="Interface/VBoxContainer/MainDisplay/ConsoleColor/Console/HeaderColor"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Spacer3" type="Control" parent="Interface/VBoxContainer/MainDisplay/ConsoleColor/Console/HeaderColor/ConsoleBar"]
margin_right = 10.0
margin_bottom = 25.0
rect_min_size = Vector2( 10, 0 )

[node name="HeaderLabel" type="Label" parent="Interface/VBoxContainer/MainDisplay/ConsoleColor/Console/HeaderColor/ConsoleBar"]
margin_left = 14.0
margin_top = 1.0
margin_right = 94.0
margin_bottom = 23.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 2 )
text = "Console:"
align = 1
valign = 1

[node name="Spacer" type="Control" parent="Interface/VBoxContainer/MainDisplay/ConsoleColor/Console/HeaderColor/ConsoleBar"]
margin_left = 98.0
margin_right = 896.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="ClearColor" type="ColorRect" parent="Interface/VBoxContainer/MainDisplay/ConsoleColor/Console/HeaderColor/ConsoleBar"]
margin_left = 900.0
margin_right = 1010.0
margin_bottom = 25.0
rect_min_size = Vector2( 110, 0 )
color = Color( 0, 0, 0, 0 )

[node name="Clear_Console" type="Button" parent="Interface/VBoxContainer/MainDisplay/ConsoleColor/Console/HeaderColor/ConsoleBar/ClearColor"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
text = "Clear Console"

[node name="Spacer2" type="Control" parent="Interface/VBoxContainer/MainDisplay/ConsoleColor/Console/HeaderColor/ConsoleBar"]
margin_left = 1014.0
margin_right = 1024.0
margin_bottom = 25.0
rect_min_size = Vector2( 10, 0 )

[node name="ConsoleContainer" type="HBoxContainer" parent="Interface/VBoxContainer/MainDisplay/ConsoleColor/Console"]
margin_top = 29.0
margin_right = 1024.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Spacer" type="Control" parent="Interface/VBoxContainer/MainDisplay/ConsoleColor/Console/ConsoleContainer"]
margin_bottom = 139.0

[node name="ConsoleColor" type="ColorRect" parent="Interface/VBoxContainer/MainDisplay/ConsoleColor/Console/ConsoleContainer"]
margin_left = 4.0
margin_right = 1020.0
margin_bottom = 139.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.172549, 0.164706, 0.196078, 1 )

[node name="ConsoleOutput" type="RichTextLabel" parent="Interface/VBoxContainer/MainDisplay/ConsoleColor/Console/ConsoleContainer/ConsoleColor"]
margin_left = 4.0
margin_right = 1020.0
margin_bottom = 139.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_following = true
selection_enabled = true

[node name="Spacer3" type="Control" parent="Interface/VBoxContainer/MainDisplay/ConsoleColor/Console/ConsoleContainer"]
margin_left = 1024.0
margin_right = 1024.0
margin_bottom = 139.0

[node name="Spacer2" type="Control" parent="Interface/VBoxContainer/MainDisplay/ConsoleColor/Console"]
margin_top = 172.0
margin_right = 1024.0
margin_bottom = 172.0

[node name="Windows" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Overlays" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="FileDialog" type="FileDialog" parent="Overlays"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.0
margin_top = -131.0
margin_right = 215.0
margin_bottom = 131.0
resizable = true
